  * debian/copryight: update for prism.js, remove js which are gone

  * debian/rules:
    - mkdir -p /usr/lib/libreoffice/share/extensions explicitely to have us
      "own it"
  * debian/shell-lib-extensions.sh:
    - only touch /usr/lib/libreoffice/share/extensions when it is existing and
      a directory to go sure
  (both together closes: #1005832, #1018750)

 -- Rene Engelhard <rene@debian.org>  Sun, 28 Aug 2022 22:08:26 +0200

libreoffice (1:7.4.1~rc1-2) unstable; urgency=medium

  * upload to unstable 

  * debian/watch: watch releases again for preparation of not uploading any
    rc anymore

 -- Rene Engelhard <rene@debian.org>  Thu, 25 Aug 2022 07:59:51 +0200

libreoffice (1:7.4.1~rc1-1) experimental; urgency=medium

  * debian/patches/Make-configure-work-with-gpgme-1.18.patch: as name says,
    from gerrit

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 24 Aug 2022 18:28:30 +0200

libreoffice (1:7.4.0~rc3-1) unstable; urgency=medium

  * debian/patches/add-libebook-1.2.so.21.patch: as name says for libebook
    SONAME bump
  * debian/patches/fix-eot-configure-ac.diff: as name says; make --enable-eot
    work again 

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 10 Aug 2022 16:04:33 +0000

libreoffice (1:7.4.0~rc2-3) unstable; urgency=medium

  * debian/changelog: oops, fix merge... 

 -- Rene Engelhard <rene@debian.org>  Thu, 28 Jul 2022 22:58:57 +0200

libreoffice (1:7.4.0~rc2-2) unstable; urgency=medium

  * upload to unstable 

 -- Rene Engelhard <rene@debian.org>  Thu, 28 Jul 2022 08:52:48 +0200

libreoffice (1:7.4.0~rc2-1) experimental; urgency=medium

  * debian/patches/svm-test-bigendian.diff: from master, fix svm test on
    bigendian (other tests still fail)
  * debian/patches/hrk-euro.diff: add HRK->EUR to the (hidden) Euro Conversion
    Wizard for completeness' sake
  * debian/patches/fix-uicheck-tests-on-i386.patch: readd lost/still needed